--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,13 @@
       integrity="sha512-WIklPM6qPCIp6d3fSSr90j+1unQHUOoWDS4sdTiR8gxUTnyZ8S2Mr8e10sKKJ/bhJgpAa/qG068RDkg6fIlNFA=="
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <title>👻👻👻 Ghost Game 👻👻👻</title>
+    <script src="ghost.js"></script>
     <script src="sketch.js"></script>
-    <title>Ghosts</title>
   </head>
   <body></body>
 </html>
