--- a/startGame/index.html
+++ b/startGame/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script>
     <link rel="stylesheet" href="style.css" />
+    <script src="../lib/peerjs.js"></script>
+    <script src="../johnpeer.js" type="module"></script>
     <script src="script.js"></script>
     <title>Ghost World Start Game</title>
   </head>
   <body>
     <button onclick="startGame()">Start Game!</button>
+    <video class="remote-video" autoplay></video>
   </body>
 </html>
