i think i got it....

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>👻👻👻 Ghost Game 👻👻👻</title>
+
+    <script src="/lib/peerjs.js"></script>
+    
+    <!-- import the webpage's client-side javascript file -->
+    <script src="/ghostpeer.js" type="module"></script>
+
     <script src="ghost.js"></script>
     <script src="sketch.js"></script>
   </head>
-  <body></body>
+  <body>
+    <video class="remote-video" autoplay></video>
+
+  </body>
 </html>
