--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <video class="remote-video" autoplay></video>
+    <canvas id="myCanvas" width="1" height="1"></canvas>
 
   </body>
 </html>
