resize + modal + font

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <title>👻👻👻 Ghost Game 👻👻👻</title>
 
     <script src="/lib/peerjs.js"></script>
-    
+
     <!-- import the webpage's client-side javascript file -->
     <script src="/ghostpeer.js" type="module"></script>
 
@@ -22,6 +22,19 @@
   </head>
   <body>
     <video class="remote-video" autoplay></video>
+    <div id="instructions">
+      <h3>Welcome to Haunt That House!</h3>
 
+      <p>
+        You're a ghost and you have three minutes to haunt a real human house.!
+        Float around with WAS and D.
+      </p>
+
+      <p>
+        If you fully haunt two of the three objects in the house, you win! Work
+        together and watch out for the ghost zapper!
+      </p>
+      <p>Click anywhere to hide this when you're ready!</p>
+    </div>
   </body>
 </html>
